Closed Bug 945285 Opened 11 years ago Closed 10 years ago

GenerationalGC: Assertion failure: isEnabled(), at ../gc/StoreBuffer.cpp:274

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: decoder, Assigned: jonco)

References

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:ignore])

Attachments

(1 file)

The following testcase asserts on mozilla-central built with --enable-exact-rooting --enable-gcgenerational, revision 53d55d2d0a25 (run with --fuzzing-safe):


gczeal(11);
function callback(obj) {}
setObjectMetadataCallback(callback);
evaluate("const { Number } = 2;");
Attached patch bug945285-verifySplinter Review
This is a conflict between the postbarrier verifier and disabling of GGC by setObjectMetadataCallback().

The fix here is not to try to verify postbarriers if the store buffer has been disabled.
Assignee: general → jcoppeard
Attachment #8346582 - Flags: review?(sphink)
Attachment #8346582 - Flags: review?(sphink) → review+
https://hg.mozilla.org/mozilla-central/rev/b43492127d47
Status: NEW → RESOLVED
Closed: 10 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: