Bug 945285 - Don't verify post barriers if store buffer is disabled r=sfink